--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "marshmallow-sqlalchemy",
     "mrcfile",
     "numpy<2",
+    "pdflatex",
     "pillow",
     "plotly",
     "pydantic>=2",
@@ -67,6 +68,7 @@ dev = [
     "clem.tiff_to_stack" = "cryoemservices.cli.clem_tiff_to_stack:run"
     "combine_star_files" = "cryoemservices.pipeliner_plugins.combine_star_files:main"
     "cryoemservices.find_symmetry" = "cryoemservices.pipeliner_plugins.symmetry_finder:run"
+    "cryoemservices.generate_session_report" = "cryomservices.cli.generate_session_report:run"
     "cryoemservices.reextract" = "cryoemservices.pipeliner_plugins.reextract:run"
     "cryoemservices.resubmit_wrapper" = "cryoemservices.cli.resubmit_wrapper:run"
     "relipy.link" = "cryoemservices.cli.project_linker:run"
