--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,6 +103,7 @@ dev = [
 [project.entry-points."zocalo.services.dispatcher.ready_for_processing"]
     ispyb = "cryoemservices.util.dispatcher_tools:ready_for_processing"
 [project.entry-points."zocalo.wrappers"]
+    CLEMAlignAndMerge = "cryoemservices.wrappers.clem_align_and_merge:AlignAndMergeWrapper"
     CLEMLIFToStack = "cryoemservices.wrappers.clem_process_raw_lifs:LIFToStackWrapper"
     CLEMTIFFToStack = "cryoemservices.wrappers.clem_process_raw_tiffs:TIFFToStackWrapper"
     Class2D = "cryoemservices.wrappers.class2d_wrapper:Class2DWrapper"
