--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ dev = [
     "cryoemservices.find_symmetry" = "cryoemservices.pipeliner_plugins.symmetry_finder:run"
     "cryoemservices.reextract" = "cryoemservices.pipeliner_plugins.reextract:run"
     "cryoemservices.resubmit_wrapper" = "cryoemservices.cli.resubmit_wrapper:run"
+    "cryoemservices.service" = "cryoemservices.cli.start_service:start_service"
     "relipy.link" = "cryoemservices.cli.project_linker:run"
 [project.entry-points."ccpem_pipeliner.jobs"]
     "combine_star_files_job" = "cryoemservices.pipeliner_plugins.combine_star_job:ProcessStarFiles"
@@ -101,8 +102,6 @@ dev = [
     TomoAlignSlurm = "cryoemservices.services.tomo_align_slurm:TomoAlignSlurm"
 [project.entry-points."zocalo.services.dispatcher.filters"]
     ispyb = "cryoemservices.util.dispatcher_tools:ispyb_filter"
-[project.entry-points."zocalo.services.dispatcher.ready_for_processing"]
-    ispyb = "cryoemservices.util.dispatcher_tools:ready_for_processing"
 [project.entry-points."zocalo.wrappers"]
     CLEMLIFToStack = "cryoemservices.wrappers.clem_process_raw_lifs:LIFToStackWrapper"
     CLEMTIFFToStack = "cryoemservices.wrappers.clem_process_raw_tiffs:TIFFToStackWrapper"
