--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ dev = [
     "cryoemservices.reextract" = "cryoemservices.pipeliner_plugins.reextract:run"
     "cryoemservices.resubmit_wrapper" = "cryoemservices.cli.resubmit_wrapper:run"
     "cryoemservices.service" = "cryoemservices.cli.start_service:start_service"
+    "cryoemservices.wrap" = "cryoemservices.cli.wrap:run"
     "relipy.link" = "cryoemservices.cli.project_linker:run"
 [project.entry-points."ccpem_pipeliner.jobs"]
     "combine_star_files_job" = "cryoemservices.pipeliner_plugins.combine_star_job:ProcessStarFiles"
@@ -80,6 +81,12 @@ dev = [
     "mrc_to_apng" = "cryoemservices.services.images_plugins:mrc_to_apng"
     "mrc_to_jpeg" = "cryoemservices.services.images_plugins:mrc_to_jpeg"
     "picked_particles" = "cryoemservices.services.images_plugins:picked_particles"
+[project.entry-points."cryoemservices.wrappers"]
+    CLEMLIFToStack = "cryoemservices.wrappers.clem_process_raw_lifs:LIFToStackWrapper"
+    CLEMTIFFToStack = "cryoemservices.wrappers.clem_process_raw_tiffs:TIFFToStackWrapper"
+    Class2D = "cryoemservices.wrappers.class2d_wrapper:Class2DWrapper"
+    Class3D = "cryoemservices.wrappers.class3d_wrapper:Class3DWrapper"
+    Refine3D = "cryoemservices.wrappers.refine3d_wrapper:Refine3DWrapper"
 [project.entry-points."workflows.services"]
     BFactor = "cryoemservices.services.bfactor_setup:BFactor"
     CTFFind = "cryoemservices.services.ctffind:CTFFind"
@@ -102,12 +109,6 @@ dev = [
     TomoAlignSlurm = "cryoemservices.services.tomo_align_slurm:TomoAlignSlurm"
 [project.entry-points."zocalo.services.dispatcher.filters"]
     ispyb = "cryoemservices.util.dispatcher_tools:ispyb_filter"
-[project.entry-points."zocalo.wrappers"]
-    CLEMLIFToStack = "cryoemservices.wrappers.clem_process_raw_lifs:LIFToStackWrapper"
-    CLEMTIFFToStack = "cryoemservices.wrappers.clem_process_raw_tiffs:TIFFToStackWrapper"
-    Class2D = "cryoemservices.wrappers.class2d_wrapper:Class2DWrapper"
-    Class3D = "cryoemservices.wrappers.class3d_wrapper:Class3DWrapper"
-    Refine3D = "cryoemservices.wrappers.refine3d_wrapper:Refine3DWrapper"
 
 [tool.setuptools]
 package-dir = { "" = "src" }
