--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
 ]
 dependencies = [
+    "backports.entry_points_selectable",
     "defusedxml", # CLEM workflow
     "gemmi==0.6.5",
     "healpy",
@@ -69,7 +70,7 @@ dev = [
     "cryoemservices.find_symmetry" = "cryoemservices.pipeliner_plugins.symmetry_finder:run"
     "cryoemservices.reextract" = "cryoemservices.pipeliner_plugins.reextract:run"
     "cryoemservices.resubmit_wrapper" = "cryoemservices.cli.resubmit_wrapper:run"
-    "cryoemservices.service" = "cryoemservices.cli.start_service:start_service"
+    "cryoemservices.service" = "cryoemservices.cli.start_service:run"
     "cryoemservices.wrap" = "cryoemservices.cli.wrap:run"
     "relipy.link" = "cryoemservices.cli.project_linker:run"
 [project.entry-points."ccpem_pipeliner.jobs"]
@@ -81,6 +82,8 @@ dev = [
     "mrc_to_apng" = "cryoemservices.services.images_plugins:mrc_to_apng"
     "mrc_to_jpeg" = "cryoemservices.services.images_plugins:mrc_to_jpeg"
     "picked_particles" = "cryoemservices.services.images_plugins:picked_particles"
+[project.entry-points."cryoemservices.services.process_recipe.filters"]
+    ispyb = "cryoemservices.util.process_recipe_tools:ispyb_filter"
 [project.entry-points."cryoemservices.wrappers"]
     CLEMLIFToStack = "cryoemservices.wrappers.clem_process_raw_lifs:LIFToStackWrapper"
     CLEMTIFFToStack = "cryoemservices.wrappers.clem_process_raw_tiffs:TIFFToStackWrapper"
@@ -103,12 +106,11 @@ dev = [
     MotionCorr = "cryoemservices.services.motioncorr:MotionCorr"
     NodeCreator = "cryoemservices.services.node_creator:NodeCreator"
     PostProcess = "cryoemservices.services.postprocess:PostProcess"
+    ProcessRecipe = "cryoemservices.services.process_recipe:ProcessRecipe"
     SelectClasses = "cryoemservices.services.select_classes:SelectClasses"
     SelectParticles = "cryoemservices.services.select_particles:SelectParticles"
     TomoAlign = "cryoemservices.services.tomo_align:TomoAlign"
     TomoAlignSlurm = "cryoemservices.services.tomo_align_slurm:TomoAlignSlurm"
-[project.entry-points."zocalo.services.dispatcher.filters"]
-    ispyb = "cryoemservices.util.dispatcher_tools:ispyb_filter"
 
 [tool.setuptools]
 package-dir = { "" = "src" }
